--- a/WindowsProject1/WindowsProject1.vcxproj
+++ b/WindowsProject1/WindowsProject1.vcxproj
@@ -132,23 +132,25 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Drawer.h" />
+    <ClInclude Include="IDrawable.h" />
+    <ClInclude Include="Images.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="basewin.h" />
+    <ClInclude Include="Main.h" />
     <ClInclude Include="MoreVK.h" />
     <ClInclude Include="Resource.h" />
-    <ClInclude Include="RunCodePeriodicallyMaybe.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TimedCode.h" />
     <ClInclude Include="TimedCodeController.h" />
-    <ClInclude Include="TimedCodeIncludes.h" />
+    <ClInclude Include="Utils.h" />
     <ClInclude Include="Vector2.h" />
     <ClInclude Include="WindowsProject1.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Drawer.cpp" />
-    <ClCompile Include="RunCodePeriodicallyMaybe.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="TimedCode.cpp" />
     <ClCompile Include="TimedCodeController.cpp" />
