--- a/WindowsProject1/WindowsProject1.vcxproj
+++ b/WindowsProject1/WindowsProject1.vcxproj
@@ -131,7 +131,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Animation.h" />
+    <ClInclude Include="Box.h" />
+    <ClInclude Include="Collider.h" />
+    <ClInclude Include="ColliderController.h" />
     <ClInclude Include="Drawer.h" />
+    <ClInclude Include="ICollider.h" />
     <ClInclude Include="IDrawable.h" />
     <ClInclude Include="Images.h" />
     <ClInclude Include="InputManager.h" />
@@ -139,9 +144,13 @@
     <ClInclude Include="basewin.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="MoreVK.h" />
+    <ClInclude Include="MoreWM.h" />
+    <ClInclude Include="PlayerController.h" />
+    <ClInclude Include="Print.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Time.h" />
     <ClInclude Include="TimedCode.h" />
     <ClInclude Include="TimedCodeController.h" />
     <ClInclude Include="Utils.h" />
@@ -149,8 +158,14 @@
     <ClInclude Include="WindowsProject1.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Box.cpp" />
+    <ClCompile Include="Collider.cpp" />
+    <ClCompile Include="ColliderController.cpp" />
     <ClCompile Include="Drawer.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="PlayerController.cpp" />
+    <ClCompile Include="Print.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="TimedCode.cpp" />
     <ClCompile Include="TimedCodeController.cpp" />
