--- a/WindowsProject1/WindowsProject1.vcxproj
+++ b/WindowsProject1/WindowsProject1.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="Collider.h" />
     <ClInclude Include="ColliderController.h" />
     <ClInclude Include="Drawer.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="ICollider.h" />
     <ClInclude Include="IDrawable.h" />
     <ClInclude Include="Images.h" />
@@ -152,8 +153,10 @@
     <ClInclude Include="SpriteCollider.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Time.h" />
-    <ClInclude Include="TimedCode.h" />
-    <ClInclude Include="TimedCodeController.h" />
+    <ClInclude Include="TimedCodeAlways.h" />
+    <ClInclude Include="TimedCodeBase.h" />
+    <ClInclude Include="TimedCodeBullet.h" />
+    <ClInclude Include="TimedCodeMenu.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="Vector2.h" />
     <ClInclude Include="WindowsProject1.h" />
@@ -164,6 +167,7 @@
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="ColliderController.cpp" />
     <ClCompile Include="Drawer.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="PlayerController.cpp" />
@@ -171,8 +175,9 @@
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="SpriteCollider.cpp" />
     <ClCompile Include="Time.cpp" />
-    <ClCompile Include="TimedCode.cpp" />
-    <ClCompile Include="TimedCodeController.cpp" />
+    <ClCompile Include="TimedCodeAlways.cpp" />
+    <ClCompile Include="TimedCodeBullet.cpp" />
+    <ClCompile Include="TimedCodeMenu.cpp" />
     <ClCompile Include="Vector2.cpp" />
     <ClCompile Include="WindowsProject1.cpp" />
   </ItemGroup>
