--- a/WindowsProject1/WindowsProject1.vcxproj
+++ b/WindowsProject1/WindowsProject1.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="basewin.h" />
     <ClInclude Include="ITextable.h" />
+    <ClInclude Include="ITimedCode.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuManager.h" />
@@ -158,12 +159,10 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="SpriteCollider.h" />
+    <ClInclude Include="State.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Time.h" />
-    <ClInclude Include="TimedCodeAlways.h" />
-    <ClInclude Include="TimedCodeBase.h" />
-    <ClInclude Include="TimedCodeBullet.h" />
-    <ClInclude Include="TimedCodeMenu.h" />
+    <ClInclude Include="TimedCode.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="Vector2.h" />
     <ClInclude Include="WindowsProject1.h" />
@@ -186,9 +185,7 @@
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="SpriteCollider.cpp" />
     <ClCompile Include="Time.cpp" />
-    <ClCompile Include="TimedCodeAlways.cpp" />
-    <ClCompile Include="TimedCodeBullet.cpp" />
-    <ClCompile Include="TimedCodeMenu.cpp" />
+    <ClCompile Include="TimedCode.cpp" />
     <ClCompile Include="Vector2.cpp" />
     <ClCompile Include="WindowsProject1.cpp" />
   </ItemGroup>
