--- a/WindowsProject1/WindowsProject1.vcxproj
+++ b/WindowsProject1/WindowsProject1.vcxproj
@@ -140,15 +140,21 @@
     <ClInclude Include="Collider.h" />
     <ClInclude Include="ColliderController.h" />
     <ClInclude Include="Drawer.h" />
+    <ClInclude Include="FleeChooser.h" />
+    <ClInclude Include="FleeMenu.h" />
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="IButton.h" />
     <ClInclude Include="ICollider.h" />
     <ClInclude Include="IDrawable.h" />
     <ClInclude Include="Images.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="basewin.h" />
+    <ClInclude Include="Item.h" />
+    <ClInclude Include="ItemChooser.h" />
     <ClInclude Include="ITextable.h" />
     <ClInclude Include="ITimedCode.h" />
+    <ClInclude Include="LambdaButton.h" />
     <ClInclude Include="Main.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuManager.h" />
@@ -175,8 +181,12 @@
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="ColliderController.cpp" />
     <ClCompile Include="Drawer.cpp" />
+    <ClCompile Include="FleeChooser.cpp" />
+    <ClCompile Include="FleeMenu.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="ItemChooser.cpp" />
+    <ClCompile Include="LambdaButton.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="MenuManager.cpp" />
