--- a/WindowsProject1/WindowsProject1.vcxproj
+++ b/WindowsProject1/WindowsProject1.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="Collider.h" />
     <ClInclude Include="ColliderController.h" />
     <ClInclude Include="Drawer.h" />
+    <ClInclude Include="FightMenu.h" />
     <ClInclude Include="FleeChooser.h" />
     <ClInclude Include="FleeMenu.h" />
     <ClInclude Include="GameManager.h" />
@@ -181,6 +182,7 @@
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="ColliderController.cpp" />
     <ClCompile Include="Drawer.cpp" />
+    <ClCompile Include="FightMenu.cpp" />
     <ClCompile Include="FleeChooser.cpp" />
     <ClCompile Include="FleeMenu.cpp" />
     <ClCompile Include="GameManager.cpp" />
