--- a/WindowsProject1/WindowsProject1.vcxproj.filters
+++ b/WindowsProject1/WindowsProject1.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClInclude Include="IButton.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FightMenu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WindowsProject1.cpp">
@@ -204,6 +207,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LambdaButton.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FightMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
