--- a/WindowsProject1/WindowsProject1.vcxproj
+++ b/WindowsProject1/WindowsProject1.vcxproj
@@ -133,6 +133,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Action.h" />
+    <ClInclude Include="ActMenu.h" />
     <ClInclude Include="AnimatedSprite.h" />
     <ClInclude Include="Box.h" />
     <ClInclude Include="Button.h" />
@@ -140,13 +142,16 @@
     <ClInclude Include="Collider.h" />
     <ClInclude Include="ColliderController.h" />
     <ClInclude Include="Drawer.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="FightMenu.h" />
     <ClInclude Include="FleeChooser.h" />
     <ClInclude Include="FleeMenu.h" />
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="IBullet.h" />
     <ClInclude Include="IButton.h" />
     <ClInclude Include="ICollider.h" />
     <ClInclude Include="IDrawable.h" />
+    <ClInclude Include="IEnemy.h" />
     <ClInclude Include="Images.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="framework.h" />
@@ -162,6 +167,7 @@
     <ClInclude Include="MoreVK.h" />
     <ClInclude Include="MoreWM.h" />
     <ClInclude Include="PlayerController.h" />
+    <ClInclude Include="PointerBullet.h" />
     <ClInclude Include="Print.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Sprite.h" />
@@ -170,11 +176,14 @@
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="TimedCode.h" />
+    <ClInclude Include="Turn.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="Vector2.h" />
     <ClInclude Include="WindowsProject1.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Action.cpp" />
+    <ClCompile Include="ActMenu.cpp" />
     <ClCompile Include="AnimatedSprite.cpp" />
     <ClCompile Include="Box.cpp" />
     <ClCompile Include="Button.cpp" />
@@ -182,6 +191,7 @@
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="ColliderController.cpp" />
     <ClCompile Include="Drawer.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="FightMenu.cpp" />
     <ClCompile Include="FleeChooser.cpp" />
     <ClCompile Include="FleeMenu.cpp" />
@@ -193,6 +203,7 @@
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="MenuManager.cpp" />
     <ClCompile Include="PlayerController.cpp" />
+    <ClCompile Include="PointerBullet.cpp" />
     <ClCompile Include="Print.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="SpriteCollider.cpp" />
