--- a/WindowsProject1/WindowsProject1.vcxproj.filters
+++ b/WindowsProject1/WindowsProject1.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Froggit">
+      <UniqueIdentifier>{ffb8139a-903f-4dd2-b135-2a74364ba6d0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -138,9 +141,6 @@
     <ClInclude Include="ActMenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Enemy.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="IEnemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -158,6 +158,12 @@
     </ClInclude>
     <ClInclude Include="Battle.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Froggit.h">
+      <Filter>Froggit</Filter>
+    </ClInclude>
+    <ClInclude Include="Fly.h">
+      <Filter>Froggit</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -239,9 +245,6 @@
     <ClCompile Include="ActMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Enemy.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="PointerBullet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -250,6 +253,12 @@
     </ClCompile>
     <ClCompile Include="Battle.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Froggit.cpp">
+      <Filter>Froggit</Filter>
+    </ClCompile>
+    <ClCompile Include="Fly.cpp">
+      <Filter>Froggit</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
