--- a/WindowsProject1/WindowsProject1.vcxproj
+++ b/WindowsProject1/WindowsProject1.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -139,8 +139,10 @@
     <ClInclude Include="Box.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="ButtonManager.h" />
+    <ClInclude Include="CheckMenu.h" />
     <ClInclude Include="Collider.h" />
     <ClInclude Include="ColliderController.h" />
+    <ClInclude Include="Death.h" />
     <ClInclude Include="Drawer.h" />
     <ClInclude Include="Fly.h" />
     <ClInclude Include="Froggit.h" />
@@ -189,8 +191,10 @@
     <ClCompile Include="Box.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="ButtonManager.cpp" />
+    <ClCompile Include="CheckMenu.cpp" />
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="ColliderController.cpp" />
+    <ClCompile Include="Death.cpp" />
     <ClCompile Include="Drawer.cpp" />
     <ClCompile Include="Fly.cpp" />
     <ClCompile Include="Froggit.cpp" />
